Update bg image styles

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Ori Bits LLC</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main.min.css" />
     <noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
-	</noscript>
+        <link rel="stylesheet" href="assets/css/noscript.min.css" />
+    </noscript>
 </head>
 
 <body class="is-preload">
@@ -16,26 +16,14 @@
         <div id="bg"></div>
         <div id="overlay"></div>
         <div id="main">
-            <!-- Header -->
             <header id="header">
                 <h1>Ori Bits</h1>
-                <p>The Orion of Tech</p>
-                <p>Coming soon...</p>
-                <nav>
-                    <ul>
-                        <li><a href="https://twitter.com/oribitstech" class="icon brands fa-twitter"><span
-									class="label">Twitter</span></a></li>
-                        <li><a href="https://github.com/oribits" class="icon brands fa-github"><span
-									class="label">Github</span></a></li>
-                    </ul>
-                </nav>
+                <h3>The Orion of Tech</h3>
+                <h3>Coming soon...</h3>
             </header>
-
-            <!-- Footer -->
             <footer id="footer">
-                <span class="copyright">&copy; 2021 Ori Bits LLC.</span>
+                <span class="copyright">&copy; 2021 Ori Bits LLC</span>
             </footer>
-
         </div>
     </div>
     <script>
